[gd_scene load_steps=4 format=3 uid="uid://dvhcym7c474w6"]

[ext_resource type="Script" uid="uid://o8i8h7j5k048" path="res://Scenes/transition.gd" id="1_28asi"]
[ext_resource type="AudioStream" uid="uid://cw7qsh6bbo2hr" path="res://Sounds/Swish/swish-6.wav" id="2_ns43n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j4pnd"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 32
border_width_top = 32
border_width_right = 32
border_width_bottom = 32
border_color = Color(0.8, 0.466667, 0.192157, 1)

[node name="CanvasLayer" type="CanvasLayer" groups=["transition_layer"]]
script = ExtResource("1_28asi")

[node name="Root" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 200)
mouse_filter = 1

[node name="IncomingContainer" type="SubViewportContainer" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -56.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2

[node name="IncomingViewport" type="SubViewport" parent="Root/IncomingContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Frame" type="Panel" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(300, 200)
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_j4pnd")

[node name="Scrim" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0, 0, 0, 0)

[node name="TransitionLayer" type="Node2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ns43n")
volume_db = -8.083
